--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "@supabase/supabase-js": "^2.46.1",
+    "axios": "^1.7.8",
     "dotenv": "^16.4.5",
     "openai": "^4.71.1",
     "pinia": "^2.2.4",
